[tool.poetry]
name = "ems-backend"
version = "0.1.0"
description = ""
authors = ["kaineus2999 <kaineus2999@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ems_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
